<resources>
    <string name="app_name">LuseenApp</string>

    <!-- Other -->

    <string name="logo_description">Luseen Logo</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="login_tittle">Login</string>
    <string name="register_tittle">Register</string>
    <string name="recovery_tittle">Recover the password</string>
    <string name="error">Error, Sorry!</string>
    <string name="forgot_password">Forgot the password</string>
    <string name="recover_password">Recover the password</string>
    <string name="show_password">Your password</string>
    <string name="recovery">Recover</string>
    <string name="create">Create</string>
    <string name="text">Text</string>
    <string name="use_example">Use Examples</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No such comments!</string>
    <string name="account">Account</string>

    <!-- Other -->

    <!-- Login&Register Fields -->

    <string name="successfully_registered">You has benn registered successfully!</string>

    <string name="register_name">Name</string>
    <string name="register_surname">Surname</string>
    <string name="register_rank_tittle">Rank</string>
    <string name="register_speciality_tittle">Speciality</string>

    <string name="login_field_hint">E-Mail or Username</string>
    <string name="recovery_username_hint">Username</string>
    <string name="register_email_field_hint">E-Mail</string>
    <string name="password_field_hint">Password</string>
    <string name="password_duplicate_field_hint">Confirm password</string>

    <!-- Login&Register Fields -->

    <!-- Spinner -->

    <string name="speciality_field">--Speciality--</string>
    <string name="rank_field">--Rank--</string>
    <string name="date_field">Date</string>
    <string name="time_field">Time</string>

    <string name="rank_developer">Developer</string>
    <string name="rank_trainer">Trainer</string>
    <string name="rank_student">Student</string>

    <string name="speciality_web">Web</string>
    <string name="speciality_java">Java</string>
    <string name="speciality_android">Android</string>
    <string name="speciality_ios">IOS</string>
    <string name="speciality_sql">SQL</string>
    <string name="speciality_linux">Linux</string>
    <string name="speciality_server">Server Programming</string>

    <!-- Spinner -->

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- Errors -->

    <string name="no_internet_connection">No internet connection!</string>
    <string name="no_have_permissions">You no have permissions!</string>
    <string name="empty_fields">Enter all fields!!</string>
    <string name="password_fields_not_once">Passwords incorrect!</string>
    <string name="incorrect_login_or_password">Incorrect login or password</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="user_duplicate">User with this name already exists!</string>
    <string name="user_mail_duplicate">User with this E-Mail already exists!</string>

    <!-- Errors -->

    <!-- LogIn&LogOut -->

    <string name="question_want_to_leave">You want to leave from your account?</string>
    <string name="question_want_to_leave_the_app">You want to leave from Application?</string>
    <string name="log_out">LEAVE</string>
    <string name="log_in">SIGN IN</string>

    <!-- LogIn&LogOut -->

    <!-- Menu -->

    <string name="settings">Settings</string>
    <string name="action_create_post">Create post</string>
    <string name="menu_news">News</string>
    <string name="menu_publications">Posts</string>
    <string name="menu_profile_settings">Profile settings</string>
    <string name="menu_application_settings">Application settings</string>
    <string name="menu_my_publications">My posts</string>
    <string name="general">General</string>
    <string name="user">User</string>
    <string name="information">Information</string>
    <string name="action_notify_new_comment">Notify when has a new comment</string>
    <string name="action_notify_new_post">Notify when has a new post</string>
    <string name="action_notify_news">Notify when has news</string>
    <string name="action_edit_post">Edit</string>
    <string name="action_delete_post">Delete</string>

    <!-- Menu -->

    <!-- Notifications -->

    <string name="new_comment_title">New comment</string>
    <string name="have_new_comment">Has a new comment on post</string>

    <!-- Notifications -->

    <!-- Dialogs -->

    <string name="account_delete_dialog_enter_password">Enter the password</string>
    <string name="account_delete_dialog_title">Delete account</string>

    <!-- Dialogs -->

    <!-- Settings -->

    <string name="use_background_processes">Use background processes</string>

    <string name="delete_account">Delete the account</string>

    <!-- Settings -->

    <!-- Settings titles -->

    <string name="settings_title_background_processes">Background processes</string>
    <string name="background_process_summary">You must be able this point for gather notifications, if this poit not allowed, notifications will not gathered</string>
    <string name="delete_account_summary">You should delete your account</string>

    <!-- Settings titles -->

</resources>
