<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/general">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_news"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_news" />
                <item
                    android:id="@+id/menu_publications"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_publications" />
            </group>

        </menu>

    </item>

    <item android:title="@string/user">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_my_posts"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_my_publications" />

            </group>

        </menu>

    </item>

    <item android:title="@string/settings">

        <menu>

            <group>

                <item
                    android:id="@+id/menu_application_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_application_settings" />

            </group>

        </menu>

    </item>

</menu>
