<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/action_add_post_group"
        android:orderInCategory="0">

        <item
            android:id="@+id/action_create_post"
            android:icon="@drawable/ic_library_plus_white_24dp"
            android:title="@string/action_create_post"
            app:showAsAction="ifRoom" />

    </group>

    <group
        android:id="@+id/action_notify_data_group"
        android:orderInCategory="1">

        <item
            android:id="@+id/action_notify_news"
            android:title="@string/action_notify_news"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_notify_new_post"
            android:title="@string/action_notify_new_post"
            app:showAsAction="never" />

    </group>

</menu>
