<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luseen.vanik.luseenapp.Activities.Fragments.LogRegFragments.RecoveryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/window_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/recovery_tittle"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/recovery_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/register_email_field_hint"
                android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect" />

            <EditText
                android:id="@+id/recovery_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/recovery_username_hint"
                android:inputType="textPersonName|textAutoCorrect|textAutoComplete" />

            <Button
                android:id="@+id/done_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/done_button"
                android:text="@string/recovery"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
