<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luseen.vanik.luseenapp.Activities.Fragments.LogRegFragments.RegisterFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/data_window"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/window_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/register_tittle"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/register_username_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:hint="@string/register_name"
                        android:inputType="textAutoComplete|textPersonName" />

                    <EditText
                        android:id="@+id/register_user_surname_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:hint="@string/register_surname"
                        android:inputType="textAutoComplete|textPersonName" />

                </LinearLayout>


                <EditText
                    android:id="@+id/register_mail_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/register_email_field_hint"
                    android:inputType="textEmailAddress|textAutoComplete" />

                <EditText
                    android:id="@+id/register_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/password_field_hint"
                    android:inputType="textPassword|textAutoComplete" />

                <EditText
                    android:id="@+id/register_password_duplicate_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/password_duplicate_field_hint"
                    android:inputType="textPassword|textAutoComplete" />

                <ProgressBar
                    android:id="@+id/register_load_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/specialty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />

                <Spinner
                    android:id="@+id/rank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/done_button"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>
