<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luseen.vanik.luseenapp.Activities.Fragments.LogRegFragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/data_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/window_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/login_tittle"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/login_mail_or_username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@android:drawable/ic_dialog_email"
                android:drawableStart="@android:drawable/ic_dialog_email"
                android:hint="@string/login_field_hint"
                android:inputType="textEmailAddress|textAutoComplete" />

            <EditText
                android:id="@+id/login_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                android:drawableStart="@android:drawable/ic_lock_idle_lock"
                android:hint="@string/password_field_hint"
                android:inputType="textPassword|textAutoComplete" />

            <ProgressBar
                android:id="@+id/load_progress"
                android:layout_width="50dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/done_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/done_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
